demo/kube/deploy-gowon.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.27.3-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowon
  labels:
    app.kubernetes.io/name: gowon
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gowon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gowon
    spec:
      serviceAccountName: gowon
      containers:
        - name: gowon
          image: gowon
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8080
              name: http
        - name: config-sync
          image: ghcr.io/kiwigrid/k8s-sidecar:1.25.3
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
