demo/kube/deploy-module1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module1
  labels:
    app.kubernetes.io/name: module1
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: module1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: module1
    spec:
      containers:
        - name: module1
          image: module1
          ports:
            - containerPort: 8080
              name: http
