demo/kube/deploy-module2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module2
  labels:
    app.kubernetes.io/name: module2
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: module2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: module2
    spec:
      containers:
        - name: module2
          image: module2
          ports:
            - containerPort: 8080
              name: http
