demo/kube/deploy-module3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module3
  labels:
    app.kubernetes.io/name: module3
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: module3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: module3
    spec:
      containers:
        - name: module3
          image: module3
          ports:
            - containerPort: 8080
              name: http
