demo/kube/deploy-module4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module4
  labels:
    app.kubernetes.io/name: module4
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: module4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: module4
    spec:
      containers:
        - name: module4
          image: module4
          ports:
            - containerPort: 8080
              name: http
