demo/kube/deploy-module5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module5
  labels:
    app.kubernetes.io/name: module5
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: module5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: module5
    spec:
      containers:
        - name: module5
          image: module5
          ports:
            - containerPort: 8080
              name: http
