demo/kube/gowon-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: gowon
  name: gowon
spec:
  containers:
    - name: gowon
      image: gowon
