demo/kube/module1-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: module1
spec:
  containers:
    - name: module1
      image: module1
