demo/kube/module2-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: module2
spec:
  containers:
    - name: module2
      image: module2
