demo/kube/module3-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: module3
spec:
  containers:
    - name: module3
      image: module3
