demo/kube/tiny-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tiny
  labels:
    app.kubernetes.io/name: tiny
spec:
  containers:
    - name: tiny
      image: ghcr.io/shanedabes/tiny:v0.9.0
      volumeMounts:
        - name: tiny-config
          mountPath: /tiny.yml
          subPath: tiny.yml
  volumes:
    - name: tiny-config
      configMap:
        name: tiny-config
