demo/kube/service-ircd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oragono
spec:
  selector:
    app.kubernetes.io/name: oragono
  ports:
    - name: ircd
      port: 6667
      targetPort: ircd
