demo/kube/service-module1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: module1
spec:
  selector:
    app.kubernetes.io/name: module1
  ports:
    - name: http
      port: 8080
      targetPort: http
