demo/kube/service-module2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: module2
spec:
  selector:
    app.kubernetes.io/name: module2
  ports:
    - name: http
      port: 8080
      targetPort: http
