demo/kube/service-module3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: module3
spec:
  selector:
    app.kubernetes.io/name: module3
  ports:
    - name: http
      port: 8080
      targetPort: http
