demo/kube/service-module4.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: module4
spec:
  selector:
    app.kubernetes.io/name: module4
  ports:
    - name: http
      port: 8080
      targetPort: http
