demo/kube/service-module5.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: module5
spec:
  selector:
    app.kubernetes.io/name: module5
  ports:
    - name: http
      port: 8080
      targetPort: http
