demo/kube/service-mosquitto.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
