demo/kube/ingress-gowon.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowon
spec:
  rules:
    - host: gowon.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gowon
                port:
                  name: http
