demo/kube/ingress-module1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module1
spec:
  rules:
    - host: module1.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module1
                port:
                  name: http
