demo/kube/ingress-module2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module2
spec:
  rules:
    - host: module2.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module2
                port:
                  name: http
