demo/kube/ingress-module3.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module3
spec:
  rules:
    - host: module3.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module3
                port:
                  name: http
