demo/kube/ingress-module4.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module4
spec:
  rules:
    - host: module4.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module4
                port:
                  name: http
