demo/kube/ingress-module5.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module5
spec:
  rules:
    - host: module5.gowon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: module5
                port:
                  name: http
